refactor: ajuste no dto de campanha